--- a/zlib/BUILD
+++ b/zlib/BUILD
@@ -1,7 +1,9 @@
 load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")
 
 cmake_external(
-    name = "libz",
+    name = "zlib",
     lib_source = "@zlib//:all",
     static_libraries = [ "libz.a" ],
+    out_lib_dir = "lib",
+    visibility = ["//visibility:public"],
 )
