--- a/openssl/BUILD
+++ b/openssl/BUILD
@@ -7,8 +7,11 @@ configure_make(
       "no-shared",
       "zlib",
       "linux-x86_64",
+      "no-ssl2",
     ],
     lib_source = "@openssl//:all",
     out_lib_dir = "lib",
     static_libraries = [ "libcrypto.a", "libssl.a" ],
+    deps = ["//zlib"],
+    visibility = ["//visibility:public"],
 )
