adds a working version of thrift

--- a/libevent/BUILD
+++ b/libevent/BUILD
@@ -23,4 +23,6 @@ configure_make(
       "//openssl",
     ],
     static_libraries = [ "libevent.a", ],
+        visibility = ["//visibility:public"],
+
 )
